salesforce-integration/Salesforce-Components/objects/Detention_Email__c/Detention_Email__c.object-meta.xml
<CustomObject>
    <label>Detention Email</label>
    <nameField>
        <displayFormat>DE-{00000000}</displayFormat>
        <label>Detention Email Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Detention Emails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>