salesforce-integration/Salesforce-Components/objects/Detention_Email__c/fields/Carrier_Sales_Rep_Email__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Sales_Rep_Email__c</fullName>
    <label>Carrier Sales Rep Email</label>
    <type>Email</type>
</CustomField>