salesforce-integration/Salesforce-Components/objects/Detention_Email__c/fields/Detention_Email_Send_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Detention_Email_Send_DateTime__c</fullName>
    <label>Detention Email Send DateTime</label>
    <type>DateTime</type>
</CustomField>