salesforce-integration/Salesforce-Components/objects/Detention_Email__c/fields/Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Email_Sent__c</fullName>
    <label>Email Sent</label>
    <type>DateTime</type>
</CustomField>