salesforce-integration/Salesforce-Components/objects/Detention_Email__c/fields/Load__c.field-meta.xml
<CustomField>
    <fullName>Load__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Load</label>
    <referenceTo>rtms__Load__c</referenceTo>
    <relationshipLabel>Detention Emails</relationshipLabel>
    <relationshipName>Detention_Emails</relationshipName>
    <type>Lookup</type>
</CustomField>