salesforce-integration/Salesforce-Components/objects/Detention_Email__c/fields/Load_URL__c.field-meta.xml
<CustomField>
    <fullName>Load_URL__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_260, FIND( &#39;/services&#39;, $Api.Partner_Server_URL_260))+Load__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Load URL</label>
    <type>Text</type>
</CustomField>