salesforce-integration/Salesforce-Components/objects/Detention_Email__c/fields/SendDetentionEmail__c.field-meta.xml
<CustomField>
    <fullName>SendDetentionEmail__c</fullName>
    <formula>Stop__r.Send_Detention_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Send Detention Email</label>
    <type>Checkbox</type>
</CustomField>